Fix : genero, metodos controller e service. Feat : repository com mais metodos